# transformer-from-scratch

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
src/fashion-mnist/configs/: __init__.py
src/fashion-mnist/configs/experiment/: __init__.py
src/fashion-mnist/models/: convnet.py
src/fashion-mnist/systems/: classifier.py
src/fashion-mnist/utils/: logging.py
src/transformer/: cli.py  main.py
src/transformer/configs/: register.py
src/transformer/configs/experiment/: __init__.py  fashion.yaml
src/transformer/configs/hydra/hydra_logging/: rich.yaml
src/transformer/configs/hydra/job_logging/: rich.yaml
src/transformer/configs/lightning/: __init__.py
src/transformer/configs/optim/: __init__.py
src/transformer/datamodules/: __init__.py
src/transformer/models/: Transformer.py  __init__.py
src/transformer/systems/: __init__.py  classifier.py  transformer.py
src/transformer/utils/: __init__.py  callbacks.py  rundir.py
