[metadata]
name = transformer
version = attr: transformer.__version__
description = Transformer from scratch implementation using PyTorch Lightning, Hydra & wandb support
long_description = file: README.md
author = Lukasz Staniszewski
author_email = lukaszstaniszewski10@gmail.com
url = https://github.com/lukasz-staniszewski/transformer-from-scratch
license = MIT
license_files = LICENSE
platform = any
keywords = neural networks, PyTorch Lightning, Hydra, wandb, transformer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
package_dir =
    = src
package_data =
    = py.typed
scripts =
install_requires =
    coolname
    gym
    hydra-configs-pytorch-lightning
    hydra-configs-torch
    hydra-configs-torchvision
    hydra-core
    matplotlib
    pytest
    python-dotenv
    pytorch-lightning
    pytorch-lightning-bolts
    rich
    setproctitle
    torchstat
    torchsummary
    tqdm
    wandb
python_requires = >=3.10

[options.packages.find]
where = src
